--- a/src/gantt.scss
+++ b/src/gantt.scss
@@ -4,6 +4,7 @@ $border-color: #e0e0e0 !default;
 $light-bg: #f5f5f5 !default;
 $light-border-color: #ebeff2 !default;
 $light-yellow: #fcf8e3 !default;
+$light-gray: #f5f5f5 !default;
 $text-muted: #666 !default;
 $text-light: #555 !default;
 $text-color: #333 !default;
@@ -37,7 +38,12 @@ $handle-color: #ddd !default;
 	}
 	.today-highlight {
 		fill: $light-yellow;
-		opacity: 0.5;
+		opacity: 0.75;
+	}
+
+	.weekend-highlight {
+		fill: $light-gray;
+		opacity: 0.4;
 	}
 
 	.arrow {
