--- a/src/gantt.scss
+++ b/src/gantt.scss
@@ -62,6 +62,9 @@ $handle-color: #ddd !default;
 	.bar-progress {
 		fill: $blue;
 	}
+	.hidden {
+		visibility: hidden;
+	}
 	.bar-invalid {
 		fill: transparent;
 		stroke: $bar-stroke;
