--- a/src/gantt.scss
+++ b/src/gantt.scss
@@ -8,7 +8,7 @@ $light-gray: #f5f5f5 !default;
 $text-muted: #666 !default;
 $text-light: #555 !default;
 $text-color: #333 !default;
-$blue: #2490ef !default;
+$blue: #0284c7 !default; // sky-600
 $handle-color: #ddd !default;
 
 .gantt {
@@ -60,7 +60,7 @@ $handle-color: #ddd !default;
 		user-select: none;
 	}
 	.bar-progress {
-		fill: $blue;
+		fill: darken($blue, 5);
 	}
 	.hidden {
 		visibility: hidden;
@@ -147,24 +147,20 @@ $handle-color: #ddd !default;
 	position: relative;
 	overflow: auto;
 	font-size: 12px;
+	overflow-y: hidden;
 
 	.popup-wrapper {
 		position: absolute;
 		top: 0;
 		left: 0;
-		background: rgba(0, 0, 0, 0.8);
+		background: rgba(0, 0, 0, 0.85);
 		padding: 0;
-		color: #959da5;
+		color: #dfe2e5;
 		border-radius: 3px;
 
 		.title {
-			border-bottom: 3px solid $blue;
-			padding: 10px;
-		}
-
-		.subtitle {
-			padding: 10px;
-			color: #dfe2e5;
+			padding-top: 5px;
+			padding-left: 10px;
 		}
 
 		.pointer {
@@ -172,7 +168,14 @@ $handle-color: #ddd !default;
 			height: 5px;
 			margin: 0 0 0 -5px;
 			border: 5px solid transparent;
-			border-top-color: rgba(0, 0, 0, 0.8);
+			border-top-color: rgba(0, 0, 0, 0.85);;
+		}
+
+		.subtitle {
+			padding-top: 0px;
+			padding-left: 10px;
+			padding-bottom: 5px;
+			color: grey;
 		}
 	}
 }
