--- a/src/gantt.scss
+++ b/src/gantt.scss
@@ -60,7 +60,7 @@ $handle-color: #ddd !default;
 		user-select: none;
 	}
 	.bar-progress {
-		fill: darken($blue, 5);
+		fill: rgba(0, 0, 0, 0.25);;
 	}
 	.hidden {
 		visibility: hidden;
@@ -107,7 +107,7 @@ $handle-color: #ddd !default;
 			}
 
 			.bar-progress {
-				fill: darken($blue, 5);
+				fill: rgba(0, 0, 0, 0.4);
 			}
 
 			.handle {
@@ -122,7 +122,7 @@ $handle-color: #ddd !default;
 			}
 
 			.bar-progress {
-				fill: darken($blue, 5);
+				fill: rgba(0, 0, 0, 0.4);
 			}
 		}
 	}
